5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1582_1331.log
== SUBMITION (2019-03-12 21:25:02) 
-- CODE:
print(round(50/3))
print(mod(50/3))
-- EXECUTION TIME:
0.151877
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 2, in <module>
    print(mod(50/3))
NameError: name 'mod' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:25:30) 
-- CODE:
print(round(50/3));
print(mod(50/3))
-- EXECUTION TIME:
0.139368
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1331/main.py", line 2, in <module>
    print(mod(50/3))
NameError: name 'mod' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:26:49) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.169681
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:02:54) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.203638
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:03:23) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:03:27) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.171956
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:04:27) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.208482
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
